--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="description"
     content="Discover amazing movies, create your favorites collection, and explore the world of cinema with Movie Explorer." />
   <meta name="theme-color" content="#e50914" />
-  <title>Movie Explorer - Discover Amazing Movies</title>
+  <title>Movie Trek - Discover Amazing Movies</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
